le cambie el color
El color aliceblue es blanco

--- a/jhvd.html
+++ b/jhvd.html
@@ -11,7 +11,7 @@
 		<div class="col-md-12 fondo1" >
 			<div class="fon" >
 				<h1>Páginas Web</h1>
-				<p id="pe">Allison Vazquez Zavala </p>
+				<p id="pe" style="color:aliceblue">Allison Vazquez Zavala </p>
 		    </div>
 		</div>
 		</div>
